css/sass/modules/_parallax.scss
.bg-holder {
    width: 100%;
    height: 100%;
}

#bg-home {
    height: 100%; 
    background: url("../img/eggs1.jpg");
}

#bg-services,
#bg-work {
    height: 100%;
    background: url("../img/eggs2.jpg");
    background-size: 200%;
    
    .hash {
        position: absolute;
        top: 300px;
        left: 0;
        width: 100%;
        height: 425px;
        background: url("../img/hash.png");
        background-size: 1600px 450px;        
    }
}

#bg-work {
    background: url("../img/eggs3.jpg");
}

.parallax-bg-egg {
    overflow: hidden;
    position: relative;
    top: 0;
    height: 100%;
    background: url("../img/egg-mesh-home-bg.png") no-repeat;
    background-position: 50% 50%;
    background-size: 80%;
    
    @media all and (orientation:portrait) {
        background-size: 125%;
    }
}

.parallax-text {
    @include vertical-align;
    max-width: 90%;
    margin: -0.35em auto 0;
    line-height: 0.52em;
    font-weight: bold;
    text-align: center;
    font-style: italic;
    color: rgba(255, 255, 255, 0.8);

    span {
        opacity: 0.8;
        color: $orange;
    }
}

